src/css/project.css
#project .hero {
  height: 100vh;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
}
#project .hero .mockup {
  margin: auto !important;
}
#project .intro-container {
  background-color: #fafafa;
  height: 520px;
  margin-top: 100vh;
}
#project .intro {
  width: 1200px;
  margin: auto;
  padding: 110px 0;
  align-self: center;
  display: flex;
  height: 350px;
  justify-content: space-between;
}
#project .intro .left {
  display: flex;
  flex-direction: column;
  width: 55%;
  height: 100%;
  justify-content: space-between;
}
#project .intro .left .title {
  font-size: 40px;
  font-weight: 600;
}
#project .intro .left .desc {
  line-height: 30px;
  font-size: 16px;
}
#project .intro .left .links {
  margin-bottom: 18px;
}
#project .intro .left .link {
  color: white;
  text-decoration: none;
  padding: 18px 30px;
  font-weight: 500;
  letter-spacing: 0.5px;
  border-radius: 5px;
}
#project .intro .right {
  display: flex;
  flex-direction: column;
  width: 30%;
  height: 100%;
  justify-content: space-between;
}
#project .intro .right .item-title {
  font-weight: 600;
  letter-spacing: 0.5px;
  margin-bottom: 5px;
}

/* Project Breakdown Styles */

#project .main .container {
  margin: 150px 0;
}
#project .container .mainTextWidth {
  margin: 0 auto;
  width: 700px;
}
#project .container .projHeader {
  font-size: 30px;
  font-weight: 600;
  margin-bottom: 50px;
}

#project .container .projp {
  line-height: 40px;
  opacity: 0.8;
}
#project .container .projp p {
  margin-bottom: 30px;
}
#project .container .subHeader {
  font-size: 20px;
  font-weight: 500;
  margin-bottom: 30px;
}
#project .container .coloredHeader {
  font-size: 40px;
  font-weight: 600;
  margin: 50px 0;
}
#project .container .fourList {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 50px 0;
}
#project .container .fourList img {
  width: 100%;
}
#project .container .fourList .listItem {
  width: 45%;
}
#project .container .fourList .listItem .itemNum {
  position: absolute;
  margin-left: -30px;
  margin-top: 3px;
  font-weight: 500;
}
#project .container .fourList .listItem .subHeader {
  margin-bottom: 20px;
}
#project .container .fourList .listItem .itemContent {
  line-height: 28px;
  opacity: 0.8;
}

#project .container .sections {
  margin-bottom: 150px;
  margin-top: 150px;
}

#project .container .twocolum {
  width: 1200px;
  margin: 200px auto;
  display: flex;
  justify-content: space-between;
}
#project .container .twocolum .text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 500px;
}

#project .container .threegrid {
  display: flex;
  width: 1200px;
  margin: 0 auto;
  justify-content: space-between;
}
#project .container .threegrid .item {
  width: 30%;
}
#project .container .threegrid .item .image {
  width: 100%;
  height: 250px;
  display: flex;
  justify-content: center;
}
#project .container .threegrid .item .image img {
  width: 30%;
  object-fit: contain;
  object-position: center;
}
#project .container .threegrid .item .text {
  text-align: center;
}

#project .container .fourgrid {
  display: flex;
  width: 1200px;
  margin: auto;
  justify-content: space-between;
}
#project .container .fourgrid .item {
  width: 20%;
}
#project .container .fourgrid .item .image {
  width: 100%;
  height: 250px;
  display: flex;
  justify-content: center;
}
#project .container .fourgrid .item .image img {
  width: 30%;
  object-fit: contain;
  object-position: center;
}
#project .container .fourgrid .item .text {
  text-align: center;
  font-weight: 600;
}

#project .container .singlecolumn {
  width: 100%;
  display: flex;
  justify-content: center;
}
#project .container .singlecolumn img {
  width: 1200px;
  align-self: center;
}
#project .container .singlecolumn img.finalScreens {
  margin: 100px 0;
}
#project .container .singlecolumn img.mainTextWidth {
  width: 700px;
}
#project .container .iphoneMock {
  width: 300px;
  position: relative;
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 0 150px;
}
#project .container .iphoneMock .iphone {
  position: absolute;
  width: 100%;
}
#project .container .iphoneMock video.phone {
  width: 83%;
  margin-left: 1%;
  margin-top: -2%;
}
#project .construction {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-bottom: 100px;
}
#project .construction img {
  height: 400px;
  width: 400px;
}
#project .const {
  text-align: center;
}

/* Slider Styles*/

#project .container .slider {
  width: 100%;
}
#project .container .slider .sliderFrame {
  width: 100%;
  overflow: hidden;
}
#project .container .slider .sliderContent {
  width: 100%;
  display: flex;
  transition: 1s;
}
#project .container .slider .sliderContent img {
  width: 100%;
  height: 100%;
}
#project .container .slider .controls {
  display: flex;
  margin: 0 auto;
  justify-content: center;
  margin-top: 30px;
}
#project .container .slider .controls .sliderPos {
  height: 8px;
  width: 8px;
  background-color: #000000;
  border-radius: 50px;
  margin: 0 10px;
  opacity: 0.5;
  transition: 0.3s;
  cursor: pointer;
  align-self: center;
}
#project .container .slider .controls .sliderPos:hover {
  opacity: 0.7;
}
#project .container .slider .controls .sliderPos.active {
  opacity: 1;
}
#project .container .slider .controls .sliderPos.active:hover {
  opacity: 1;
}
#project .container .slider .controls .arrow {
  background-image: url("../images/arrow.png");
  height: 20px;
  width: 20px;
  background-size: 50%;
  background-position: center;
  background-repeat: no-repeat;
  background-color: rgb(138, 138, 138);
  border-radius: 50px;
  opacity: 0.7;
  cursor: pointer;
  transition: 0.3s;
}
#project .container .slider .controls .arrow:hover {
  opacity: 1;
}
#project .container .slider .controls .arrow.left {
  margin-right: 30px;
}
#project .container .slider .controls .arrow.right {
  transform: rotate(180deg);
  margin-left: 30px;
}

#project .container .mockupslider {
  display: flex;
  margin: 100px 0 400px;
}
#project .container .mockupslider .imac {
  position: absolute;
}
#project .container .mockupslider .sliderContent {
  overflow: hidden;
  display: flex;
  margin-top: 25px;
  height: 370px;
}
#project .container .mockupslider .sliderContent img {
  width: 100%;
  height: 100%;
  object-position: center;
  object-fit: cover;
}

/* MyCourses Specific Styles */

.myC-Notifications {
  width: 300px;
  margin-left: 100px;
  box-shadow: 2px 4px 10px 0px rgba(0, 0, 0, 0.3);
}
.myC-Grades {
  width: 600px;
}
.myC-Contact {
  width: 500px;
}
.singlecolumn.myc {
  margin-top: 200px;
}

/* Hidden but not Hiding Specific Styles */

.hidImage {
  width: 50%;
}

/* RRH specific Styles*/

#project .container .fourgrid.rrhgrid .item .image img {
  width: 70%;
  object-fit: contain;
  object-position: center;
}

#project .container .subHeader.rrhflow {
  margin-top: 100px;
}

#project .container .singlecolumn.rrh img {
  margin-top: 30px;
  margin-bottom: 100px;
}
#project .container .singlecolumn.rrhpitch {
  padding: 100px 0;
  margin: 100px 0;
}

#project .container .pitchVidRRH {
  width: 1200px;
  margin: 0 auto;
}
#project .container .pitchVidRRH video {
  width: 100%;
  margin: 0;
}

